feat: Modification of alert-management (serialization issue and open api generation issue) + integration in the frontend
